<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_background">

    <android.support.constraint.Guideline
        android:id="@+id/verticalGuideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="0dp"
        app:layout_constraintGuide_percent="0.10" />

    <android.support.constraint.Guideline
        android:id="@+id/verticalGuideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="0dp"
        app:layout_constraintGuide_percent="0.90" />

    <android.support.constraint.Guideline
        android:id="@+id/verticalGuideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="0dp"
        app:layout_constraintGuide_percent="0.40" />

    <android.support.constraint.Guideline
        android:id="@+id/verticalGuideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="0dp"
        app:layout_constraintGuide_percent="0.70" />

    <android.support.constraint.Guideline
        android:id="@+id/horizontalGuideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="0dp"
        app:layout_constraintGuide_percent="0.05" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/googlesans_bold"
        android:text="@string/home"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/horizontalGuideline2"
        app:layout_constraintEnd_toStartOf="@+id/verticalGuideline2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/verticalGuideline1"
        app:layout_constraintTop_toTopOf="@+id/horizontalGuideline1" />

    <android.support.constraint.Guideline
        android:id="@+id/horizontalGuideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="0dp"
        app:layout_constraintGuide_percent="0.20" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:fontFamily="@font/googlesans_bold"
        android:text="@string/manage_stock"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/horizontalGuideline3"
        app:layout_constraintEnd_toStartOf="@+id/verticalGuideline2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/verticalGuideline1"
        app:layout_constraintTop_toTopOf="@+id/horizontalGuideline2" />

    <android.support.constraint.Guideline
        android:id="@+id/horizontalGuideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="0dp"
        app:layout_constraintGuide_percent="0.25" />

    <Button
        android:id="@+id/edit_stock"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/ic_button_light_smallborder"
        android:text="@string/multiline_edit_stock"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/horizontalGuideline4"
        app:layout_constraintEnd_toStartOf="@+id/verticalGuideline3"
        app:layout_constraintStart_toStartOf="@+id/verticalGuideline1"
        app:layout_constraintTop_toTopOf="@+id/horizontalGuideline3" />

    <android.support.constraint.Guideline
        android:id="@+id/horizontalGuideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="0dp"
        app:layout_constraintGuide_percent="0.40" />

    <android.support.constraint.Guideline
        android:id="@+id/horizontalGuideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="0dp"
        app:layout_constraintGuide_percent="0.45" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:fontFamily="@font/googlesans_bold"
        android:text="@string/manage_design"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/horizontalGuideline6"
        app:layout_constraintEnd_toStartOf="@+id/verticalGuideline2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/verticalGuideline1"
        app:layout_constraintTop_toTopOf="@+id/horizontalGuideline5" />

    <android.support.constraint.Guideline
        android:id="@+id/horizontalGuideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="0dp"
        app:layout_constraintGuide_percent="0.50" />

    <Button
        android:id="@+id/add_design"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/ic_button_light_smallborder"
        android:text="@string/multiline_add_design"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/horizontalGuideline7"
        app:layout_constraintEnd_toStartOf="@+id/verticalGuideline3"
        app:layout_constraintStart_toStartOf="@+id/verticalGuideline1"
        app:layout_constraintTop_toTopOf="@+id/horizontalGuideline6" />

    <Button
        android:id="@+id/edit_design"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/ic_button_light_smallborder"
        android:text="@string/multiline_edit_design"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/horizontalGuideline7"
        app:layout_constraintEnd_toStartOf="@+id/verticalGuideline4"
        app:layout_constraintStart_toStartOf="@+id/verticalGuideline3"
        app:layout_constraintTop_toTopOf="@+id/horizontalGuideline6" />

    <android.support.constraint.Guideline
        android:id="@+id/horizontalGuideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="0dp"
        app:layout_constraintGuide_percent="0.65" />

    <android.support.constraint.Guideline
        android:id="@+id/horizontalGuideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="0dp"
        app:layout_constraintGuide_percent="0.70" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:fontFamily="@font/googlesans_bold"
        android:text="@string/manage_company"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/horizontalGuideline9"
        app:layout_constraintEnd_toStartOf="@+id/verticalGuideline2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/verticalGuideline1"
        app:layout_constraintTop_toTopOf="@+id/horizontalGuideline8" />

    <android.support.constraint.Guideline
        android:id="@+id/horizontalGuideline9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="0dp"
        app:layout_constraintGuide_percent="0.75" />

    <Button
        android:id="@+id/add_company"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/ic_button_light_smallborder"
        android:text="@string/multiline_add_company"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/horizontalGuideline10"
        app:layout_constraintEnd_toStartOf="@+id/verticalGuideline3"
        app:layout_constraintStart_toStartOf="@+id/verticalGuideline1"
        app:layout_constraintTop_toTopOf="@+id/horizontalGuideline9" />

    <Button
        android:id="@+id/add_size"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/ic_button_light_smallborder"
        android:text="@string/multiline_add_size"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/horizontalGuideline10"
        app:layout_constraintEnd_toStartOf="@+id/verticalGuideline4"
        app:layout_constraintStart_toStartOf="@+id/verticalGuideline3"
        app:layout_constraintTop_toTopOf="@+id/horizontalGuideline9" />

    <android.support.constraint.Guideline
        android:id="@+id/horizontalGuideline10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="0dp"
        app:layout_constraintGuide_percent="0.90" />




</android.support.constraint.ConstraintLayout>